--- a/src/components/CopyValue/CopyValue.module.css
+++ b/src/components/CopyValue/CopyValue.module.css
@@ -10,12 +10,14 @@
   composes: line;
 
   --copy-value-icon: url('../images/kilt-coin-circle.svg');
+  --copy-value-icon-size: 1rem;
 }
 
 .didLine {
   composes: line;
 
   --copy-value-icon: url('../images/manage-did.svg');
+  --copy-value-icon-size: 1.125rem;
 }
 
 .input {
@@ -24,7 +26,7 @@
   width: calc(100% - 4.5rem);
   padding-right: 2.5rem;
   padding-left: 2rem;
-  background: var(--copy-value-icon) no-repeat left 0.625rem center/1rem, var(--input-gradient);
+  background: var(--copy-value-icon) no-repeat left 0.625rem center/var(--copy-value-icon-size), var(--input-gradient);
 }
 
 .long {
