scroll for the overflowing details

--- a/src/views/SignDidExtrinsic/SignDidExtrinsic.module.css
+++ b/src/views/SignDidExtrinsic/SignDidExtrinsic.module.css
@@ -37,6 +37,10 @@
   white-space: pre;
 }
 
+.expanded {
+  overflow: auto;
+}
+
 .buttonsLine {
   composes: buttonsLine from '../../components/Button/Button.module.css';
 }
