--- a/src/views/SignDApp/SignDApp.module.css
+++ b/src/views/SignDApp/SignDApp.module.css
@@ -52,6 +52,10 @@
   white-space: pre;
 }
 
+.expanded {
+  overflow: auto;
+}
+
 .buttonsLine {
   composes: buttonsLine from '../../components/Button/Button.module.css';
 }
