--- a/src/views/SignDApp/SignDApp.module.css
+++ b/src/views/SignDApp/SignDApp.module.css
@@ -49,7 +49,11 @@
   color: var(--color-grey-light);
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: pre;
+}
+
+.expanded {
+  overflow: auto;
 }
 
 .buttonsLine {
