--- a/src/views/SignQuote/SignQuote.module.css
+++ b/src/views/SignQuote/SignQuote.module.css
@@ -54,3 +54,9 @@
 .submit {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
+
+.errorTooltip {
+  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+  top: 2.5rem;
+  left: 50%;
+}
