SK-801: service endpoints limits 2

--- a/src/views/DidEndpointsForm/DidEndpointsForm.module.css
+++ b/src/views/DidEndpointsForm/DidEndpointsForm.module.css
@@ -121,9 +121,10 @@
   composes: buttonSecondary from '../../components/Button/Button.module.css';
 }
 
-.errorTooltipId {
+.errorTooltipField {
   composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
   top: 2.5rem;
+  left: 60%;
 }
 
 .errorTooltip {
