--- a/src/views/SignDidExtrinsic/SignDidExtrinsic.module.css
+++ b/src/views/SignDidExtrinsic/SignDidExtrinsic.module.css
@@ -58,3 +58,28 @@
   top: 2.5rem;
   left: 75%;
 }
+
+.didLine {
+  composes: didLine from '../DidEndpointsSign/DidEndpointsSign.module.css';
+}
+
+.endpointDetails {
+  composes: details from '../DidEndpointsSign/DidEndpointsSign.module.css';
+  margin-top: 1rem;
+}
+
+.endpointDetail {
+  composes: detail from '../DidEndpointsSign/DidEndpointsSign.module.css';
+}
+
+.fullWidthDetail {
+  composes: fullWidthDetail from '../DidEndpointsSign/DidEndpointsSign.module.css';
+}
+
+.endpointName {
+  composes: detailName from '../DidEndpointsSign/DidEndpointsSign.module.css';
+}
+
+.endpointValue {
+  composes: detailValue from '../DidEndpointsSign/DidEndpointsSign.module.css';
+}
