--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -4,8 +4,8 @@
   padding: 0.75rem 0 0;
   background: var(--color-dark);
   box-shadow:
-    inset 0 -3px 6px 0 rgb(var(--color-black-rgb) / 30%),
-    inset 0 3px 6px 0 rgb(var(--color-black-rgb) / 30%);
+    inset 0 -3px 6px rgb(var(--color-black-rgb) / 30%),
+    inset 0 3px 6px rgb(var(--color-black-rgb) / 30%);
   list-style: none;
   overflow-y: scroll;
   scrollbar-width: none;
@@ -72,6 +72,13 @@
 
 .card:last-child .expand {
   height: 2.25rem;
+}
+
+.card:last-child {
+  border-bottom: none;
+  box-shadow:
+    0 -1px 2px rgb(var(--color-black-rgb) / 30%),
+    inset 0 -3px 6px rgb(var(--color-black-rgb) / 30%);
 }
 
 .cardText {
