--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -29,8 +29,10 @@
 
 .noCredentials {
   composes: card from '../../components/Card/Card.module.css';
-  composes: container from '../../components/View/View.module.css';
   height: calc(100% - 2.25rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .info {
