--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -16,6 +16,25 @@
   height: calc(288rem / 16);
 }
 
+.importCredential {
+  composes: card from '../../components/Card/Card.module.css';
+  composes: importantHeadline from '../../components/Typography/Typography.module.css';
+  display: flex;
+  height: 3.25rem;
+  padding: calc(11rem / 16) 0 0 1.5rem;
+  color: var(--color-grey-light);
+  font-size: 0.75rem;
+  text-decoration: none;
+}
+
+.noCredentials {
+  composes: card from '../../components/Card/Card.module.css';
+  height: calc(100% - 2.25rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .info {
   composes: importantHeadline from '../../components/Typography/Typography.module.css';
   font-size: 1.125rem;
