--- a/src/views/W3NManage/W3NManage.module.css
+++ b/src/views/W3NManage/W3NManage.module.css
@@ -4,11 +4,7 @@
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-}
-
-.subline {
-  composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem;
+  margin-bottom: calc(31rem / 16);
 }
 
 .didLine {
