--- a/src/views/ExternalAccess/ExternalAccess.module.css
+++ b/src/views/ExternalAccess/ExternalAccess.module.css
@@ -31,6 +31,13 @@
   cursor: pointer;
 }
 
+.host {
+  word-wrap: break-word;
+  overflow: hidden;
+  text-align: left;
+  flex: 0 1 18.5rem;
+}
+
 .toggle {
   composes: toggle from '../../components/Toggle/Toggle.module.css';
 }
