--- a/src/views/DidDowngradeWarningCredentials/DidDowngradeWarningCredentials.module.css
+++ b/src/views/DidDowngradeWarningCredentials/DidDowngradeWarningCredentials.module.css
@@ -18,7 +18,8 @@
 }
 
 .credentials {
-  composes: list from '../../components/Card/Card.module.css';
+  composes: fullWidthContainer from '../../components/View/View.module.css';
+  list-style: none;
   height: calc(200rem / 16);
 }
 
