--- a/src/views/SaveCredential/SaveCredential.module.css
+++ b/src/views/SaveCredential/SaveCredential.module.css
@@ -8,7 +8,8 @@
 }
 
 .cardContainer {
-  composes: list from '../../components/Card/Card.module.css';
+  composes: fullWidthContainer from '../../components/View/View.module.css';
+  list-style: none;
   max-height: calc(250rem / 16);
 }
 
