--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,18 +1,6 @@
 .list {
-  width: calc(100% + 3rem);
-  margin: 0.25rem -1.5rem 0;
-  padding: 0.75rem 0 0;
-  background: var(--color-dark);
-  box-shadow:
-    inset 0 -3px 6px rgb(var(--color-black-rgb) / 30%),
-    inset 0 3px 6px rgb(var(--color-black-rgb) / 30%);
+  composes: fullWidthContainer from '../../components/View/View.module.css';
   list-style: none;
-  overflow-y: scroll;
-  scrollbar-width: none;
-}
-
-.list::-webkit-scrollbar {
-  display: none;
 }
 
 .card {
@@ -48,7 +36,8 @@
   width: 100%;
   height: 3.25rem;
   padding: calc(11rem / 16) 0 0;
-  background: url('../../components/images/chevron-down.svg') no-repeat right 1rem top 0.75rem/0.75rem;
+  background: url('../../components/images/chevron-down.svg') no-repeat right
+    1rem top 0.75rem/0.75rem;
   border: none;
   cursor: pointer;
 }
@@ -76,8 +65,7 @@
 
 .card:last-child {
   border-bottom: none;
-  box-shadow:
-    0 -1px 2px rgb(var(--color-black-rgb) / 30%),
+  box-shadow: 0 -1px 2px rgb(var(--color-black-rgb) / 30%),
     inset 0 -3px 6px rgb(var(--color-black-rgb) / 30%);
 }
 
