--- a/src/components/View/View.module.css
+++ b/src/components/View/View.module.css
@@ -12,6 +12,22 @@
   overflow-y: auto;
 }
 
+.fullWidthContainer {
+  width: calc(100% + 3rem);
+  margin: 0.25rem -1.5rem 0;
+  padding: 0.75rem 0 0;
+  background: var(--color-dark);
+  box-shadow:
+    inset 0 -3px 6px rgb(var(--color-black-rgb) / 30%),
+    inset 0 3px 6px rgb(var(--color-black-rgb) / 30%);
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.fullWidthContainer::-webkit-scrollbar {
+  display: none;
+}
+
 .container {
   display: flex;
   flex-direction: column;
