--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -12,7 +12,8 @@
 }
 
 .credentials {
-  composes: list from '../../components/Card/Card.module.css';
+  composes: fullWidthContainer from '../../components/View/View.module.css';
+  list-style: none;
   height: calc(288rem / 16);
 }
 
