--- a/src/views/ImportCredentials/ImportCredentials.module.css
+++ b/src/views/ImportCredentials/ImportCredentials.module.css
@@ -13,7 +13,7 @@
 }
 
 .workspace {
-  composes: list from '../../components/Card/Card.module.css';
+  composes: fullWidthContainer from '../../components/View/View.module.css';
   box-sizing: border-box;
   margin-top: 1rem;
   padding: 1.5rem;
@@ -77,7 +77,8 @@
   width: 100%;
   max-width: 100%;
   padding-right: 2rem;
-  background: url('../../components/images/checkmark-bold.svg') no-repeat right 0.25rem center/1rem;
+  background: url('../../components/images/checkmark-bold.svg') no-repeat right
+    0.25rem center/1rem;
 }
 
 .fileResult {
@@ -100,7 +101,8 @@
   composes: fileResult;
   padding: 0;
   border: 0;
-  background: url('../../components/images/info-solid-red.svg') no-repeat right 0.375rem bottom 0.25rem/0.75rem;
+  background: url('../../components/images/info-solid-red.svg') no-repeat right
+    0.375rem bottom 0.25rem/0.75rem;
   cursor: pointer;
   composes: inputText from '../../components/Typography/Typography.module.css';
   color: var(--color-text);
