--- a/src/views/SignDidCredentialsSelect/SignDidCredentialsSelect.module.css
+++ b/src/views/SignDidCredentialsSelect/SignDidCredentialsSelect.module.css
@@ -11,42 +11,16 @@
   margin: 0;
 }
 
-.allCredentials {
+.credentials {
   composes: fullWidthContainer from '../../components/View/View.module.css';
   height: calc(370rem / 16);
   padding: 0;
   margin-top: 0.75rem;
 }
 
-.noCredentials {
-  composes: allCredentials;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.info {
-  composes: importantHeadline from '../../components/Typography/Typography.module.css';
-  font-size: 1.125rem;
-  color: rgb(var(--color-white-rgb) / 33%);
-}
-
-.explainerLink {
-  composes: buttonPrimary from '../../components/Button/Button.module.css';
-}
-
 .identityLine {
   composes: component from '../../components/IdentityLine/IdentityLine.module.css';
   padding-inline: 1.5rem;
-}
-
-.identityCredentials {
-  composes: fullWidthContainer from '../../components/View/View.module.css';
-  margin: 0;
-  padding: 0;
-  height: auto;
-  width: auto;
 }
 
 .list {
