fixed lint errors

--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -168,8 +168,7 @@
   left: 0;
   bottom: 0;
   content: ' ';
-  background: url('../images/checkmark-bold.svg') no-repeat
-    center/var(--tick-size);
+  background: url('../images/checkmark-bold.svg') no-repeat center/var(--tick-size);
 }
 
 .selectMultiple:disabled {
@@ -214,8 +213,7 @@
 
 .warning {
   composes: heading from '../../components/Overlay/Overlay.module.css';
-  background: url('../../components/images/transaction-error.svg') no-repeat top
-    center/4rem;
+  background: url('../../components/images/transaction-error.svg') no-repeat top center/4rem;
   padding-top: 5rem;
   margin: 0;
   color: var(--color-orange);
