--- a/src/views/SignDid/SignDid.module.css
+++ b/src/views/SignDid/SignDid.module.css
@@ -7,11 +7,6 @@
   margin-bottom: calc(31rem / 16);
 }
 
-.subline {
-  composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem;
-}
-
 .details {
   composes: fullWidthContainer from '../../components/View/View.module.css';
   box-sizing: border-box;
@@ -88,7 +83,7 @@
   composes: buttonsLine from '../../components/Button/Button.module.css';
 }
 
-.reject {
+.cancel {
   composes: buttonSecondary from '../../components/Button/Button.module.css';
 }
 
