--- a/src/views/SignDidStart/SignDidStart.module.css
+++ b/src/views/SignDidStart/SignDidStart.module.css
@@ -21,16 +21,14 @@
   margin: 0;
 }
 
-.withCredentials,
-.withoutCredentials {
+.next {
   composes: buttonWide from '../../components/Button/Button.module.css';
   background:
     rgb(var(--color-black-rgb) / 30%)
     url('../../components/images/chevron-right.svg') no-repeat right 0.75rem center/0.375rem 0.75rem;
 }
 
-.withCredentials[aria-disabled='true'],
-.withoutCredentials[aria-disabled='true'] {
+.next[aria-disabled='true'] {
   pointer-events: auto;
   cursor: not-allowed;
   border: none;
