SK-1052: Credential insertion (#1513)

--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -1,5 +1,6 @@
 .credentialsList {
-  composes: list from '../Card/Card.module.css';
+  composes: fullWidthContainer from '../../components/View/View.module.css';
+  list-style: none;
 }
 
 .credential {
@@ -134,16 +135,44 @@
   top: 0.75rem;
   left: 1.5rem;
   margin: 0;
+  z-index: 2;
   height: var(--diameter);
   width: var(--diameter);
   border: 1px solid var(--color-white);
-  border-radius: 50%;
   background: linear-gradient(#547099 0%, #304765 43.95%, #0a1b2f 100%);
+  cursor: pointer;
 }
 
-.select:checked {
+.selectOne {
+  composes: select;
+  border-radius: 50%;
+}
+
+.selectOne:checked {
   background: content-box var(--color-green);
   padding: 3px;
+}
+
+.selectMultiple {
+  composes: select;
+  border-radius: calc(3rem / 16);
+}
+
+.selectMultiple:checked::after {
+  --tick-size: calc(var(--diameter) * 1.25);
+
+  width: var(--tick-size);
+  height: var(--tick-size);
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: ' ';
+  background: url('../images/checkmark-bold.svg') no-repeat center/var(--tick-size);
+}
+
+.selectMultiple:disabled {
+  opacity: 0.3;
 }
 
 .share {
@@ -155,10 +184,11 @@
 }
 
 .share + * {
-  width: 0.75rem;
-  height: 0.75rem;
+  --size: 0.75rem;
+
   flex-shrink: 0;
   margin-right: 0.25rem;
+  box-sizing: border-box;
 }
 
 .notAttested {
