--- a/src/views/ImportCredentials/ImportCredentials.module.css
+++ b/src/views/ImportCredentials/ImportCredentials.module.css
@@ -13,7 +13,7 @@
 }
 
 .workspace {
-  composes: list from '../../components/Card/Card.module.css';
+  composes: fullWidthContainer from '../../components/View/View.module.css';
   box-sizing: border-box;
   margin-top: 1rem;
   padding: 1.5rem;
