--- a/src/views/DidEndpointsForm/DidEndpointsForm.module.css
+++ b/src/views/DidEndpointsForm/DidEndpointsForm.module.css
@@ -22,7 +22,8 @@
 }
 
 .list {
-  composes: list from '../../components/Card/Card.module.css';
+  composes: fullWidthContainer from '../../components/View/View.module.css';
+  list-style: none;
   height: calc(250rem / 16);
   margin-top: 0.75rem;
 }
