implement new button design

--- a/src/components/Button/Button.stories.module.css
+++ b/src/components/Button/Button.stories.module.css
@@ -10,3 +10,9 @@
 
   --wide-button-icon: url('../../components/images/subscan-logo.svg');
 }
+
+.triangleNew {
+  composes: buttonNew from './Button.module.css';
+
+  --wide-button-icon: url('../../components/images/manage-did.svg');
+}
