--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -67,8 +67,22 @@
 
   background:
     var(--wide-button-icon) no-repeat 0.75rem center/1.5rem,
-    rgb(var(--color-black-rgb) / 30%) url('../../components/images/chevron-right.svg')
-    no-repeat right 0.75rem center/0.375rem 0.75rem;
+    rgb(var(--color-black-rgb) / 30%) url('../../components/images/chevron-right.svg') no-repeat right 0.75rem
+    center/0.375rem 0.75rem;
+}
+
+.buttonNew {
+  composes: buttonWide;
+  position: relative;
+
+  --wide-button-icon: url('../../components/images/chevron-right.svg');
+}
+
+.buttonNew::after {
+  content: url('../../components/images/triangle-new.svg');
+  position: absolute;
+  top: -3px;
+  right: calc(50rem / 16);
 }
 
 .buttonIcon {
