--- a/src/views/DidManage/DidManage.module.css
+++ b/src/views/DidManage/DidManage.module.css
@@ -12,6 +12,11 @@
   margin: 0.75rem 0 0;
 }
 
+.linkNew {
+  composes: buttonNew from '../../components/Button/Button.module.css';
+  margin: 0.75rem 0 0;
+}
+
 .didLine {
   composes: didLine from '../../components/CopyValue/CopyValue.module.css';
   margin-top: 1.5rem;
@@ -25,6 +30,12 @@
 
   --copy-value-icon-size: 1.5rem;
   --copy-value-icon: url('../../components/images/web3name.svg');
+}
+
+.linking {
+  composes: linkNew;
+
+  --wide-button-icon: url('../../components/images/linking_page.svg');
 }
 
 .endpoints {
