SK-1118: linking access points (#1517)
SK-1118

--- a/src/views/DidManage/DidManage.module.css
+++ b/src/views/DidManage/DidManage.module.css
@@ -27,6 +27,13 @@
   --copy-value-icon: url('../../components/images/web3name.svg');
 }
 
+.linking {
+  composes: buttonNew from '../../components/Button/Button.module.css';
+  margin: 0.75rem 0 0;
+
+  --wide-button-icon: url('../../components/images/linking_page.svg');
+}
+
 .endpoints {
   composes: link;
 
