SK-1098: import results accept more

--- a/src/views/ImportCredentials/ImportCredentials.module.css
+++ b/src/views/ImportCredentials/ImportCredentials.module.css
@@ -1,6 +1,11 @@
 .container {
   composes: container from '../../components/View/View.module.css';
   height: calc(100% - 2.5rem);
+
+  /* Make it cover the full popup so that the files can be dropped anywhere */
+  margin-top: -4rem;
+  margin-inline: -1.5rem;
+  padding: 4rem 1.5rem 2.5rem;
 }
 
 .heading {
