SK-1228: update status of attested credentials

--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -7,6 +7,10 @@
   composes: card from '../Card/Card.module.css';
 }
 
+.unusableCredential {
+  composes: credential;
+}
+
 .selectable {
   composes: credential;
   position: relative;
@@ -38,8 +42,16 @@
   composes: collapsedName from '../Card/Card.module.css';
 }
 
+.unusableCredential .collapsedName {
+  color: rgba(var(--color-grey-light-rgb) / 33%);
+}
+
 .collapsedValue {
   composes: collapsedValue from '../Card/Card.module.css';
+}
+
+.unusableCredential .collapsedValue {
+  color: rgba(var(--color-grey-light-rgb) / 33%);
 }
 
 .expanded {
@@ -63,12 +75,20 @@
   composes: download from '../Card/Card.module.css';
 }
 
+.download[disabled] {
+  opacity: 0.33;
+}
+
 .downloadPromptExpanded {
   composes: downloadPromptExpanded from '../Card/Card.module.css';
 }
 
 .presentation {
   composes: presentation from '../Card/Card.module.css';
+}
+
+.presentation[disabled] {
+  opacity: 0.33;
 }
 
 .remove {
@@ -89,6 +109,14 @@
 
 .detailValue {
   composes: detailValue from '../Card/Card.module.css';
+}
+
+.unusableCredential .detailValue {
+  color: rgba(var(--color-grey-light-rgb) / 33%);
+}
+
+.detailValue.unusableValue {
+  color: red;
 }
 
 .nameValue {
