--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -17,15 +17,30 @@
   height: calc(288rem / 16);
 }
 
-.importCredential {
+.actions {
   composes: card from '../../components/Card/Card.module.css';
   composes: importantHeadline from '../../components/Typography/Typography.module.css';
   display: flex;
   height: 3.25rem;
-  padding: calc(11rem / 16) 0 0 1.5rem;
+  justify-content: space-between;
+}
+
+.action {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
   color: var(--color-grey-light);
-  font-size: 0.75rem;
   text-decoration: none;
+  font-size: 0.75rem;
+}
+
+.importCredential {
+  composes: action;
+  padding-left: 1.5rem;
+}
+
+.checkStatus {
+  composes: action;
+  padding-right: 2.5rem;
+  background: url('../../components/images/check-status.svg') no-repeat center right 1rem;
 }
 
 .noCredentials {
