--- a/src/views/IdentityCredentials/IdentityCredentials.module.css
+++ b/src/views/IdentityCredentials/IdentityCredentials.module.css
@@ -39,8 +39,26 @@
 
 .checkStatus {
   composes: action;
-  padding-right: 2.5rem;
-  background: url('../../components/images/check-status.svg') no-repeat center right 1rem;
+  padding-right: 1rem;
+}
+
+.progress {
+  composes: spinner from '../../components/LoadingSpinner/LoadingSpinner.module.css';
+  width: 1em;
+  height: 1em;
+  margin-left: 0.375rem;
+}
+
+.progress::before {
+  background-image: url('../../components/images/check-status.svg');
+}
+
+.stagnation {
+  composes: progress;
+}
+
+.stagnation::before {
+  animation: none;
 }
 
 .noCredentials {
