SK-1277: Payment fork

--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -155,7 +155,14 @@
   margin-left: -1.5rem;
 }
 
-.select {
+.selectOne {
+  composes: inputRadio from '../../components/Input/Input.module.css';
+  position: absolute;
+  top: 0.75rem;
+  left: 1.5rem;
+}
+
+.selectMultiple {
   --diameter: 0.75rem;
 
   appearance: none;
@@ -169,20 +176,6 @@
   border: 1px solid var(--color-white);
   background: linear-gradient(#547099 0%, #304765 43.95%, #0a1b2f 100%);
   cursor: pointer;
-}
-
-.selectOne {
-  composes: select;
-  border-radius: 50%;
-}
-
-.selectOne:checked {
-  background: content-box var(--color-green);
-  padding: 3px;
-}
-
-.selectMultiple {
-  composes: select;
   border-radius: calc(3rem / 16);
 }
 
