--- a/src/views/DidUpgradeExplainer/DidUpgradeExplainer.module.css
+++ b/src/views/DidUpgradeExplainer/DidUpgradeExplainer.module.css
@@ -48,6 +48,70 @@
   background: url('../../components/images/deposit.svg') no-repeat left center;
 }
 
+.paymentMethods {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  align-items: flex-start;
+  padding-left: calc(68rem / 16);
+  margin-top: 1.5rem;
+}
+
+.paymentMethodsError {
+  composes: paymentMethods;
+  gap: 1.5rem;
+}
+
+.paymentMethod {
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  color: var(--color-grey-light);
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 1rem;
+  position: relative;
+}
+
+.inputLabel {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.kilt {
+  composes: inputLabel;
+}
+
+.insufficientKilt {
+  composes: kilt;
+  opacity: 0.3;
+}
+
+.euro {
+  composes: inputLabel;
+}
+
+.select {
+  composes: inputRadio from '../../components/Input/Input.module.css';
+  margin: 0 0.75rem 0 0;
+}
+
+.errorTooltip {
+  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+  top: 1.125rem;
+  left: -1rem;
+  transform: none;
+}
+
+.errorTooltip::after {
+  left: 1.125rem;
+}
+
 .buttonsLine {
   composes: buttonsLine from '../../components/Button/Button.module.css';
   margin-top: 1rem;
