--- a/src/views/App/App.css
+++ b/src/views/App/App.css
@@ -1,6 +1,6 @@
 /* Note this is not a CSS Modules file, the styles here will be applied globally */
 
-@import '~dialog-polyfill/dist/dialog-polyfill.css';
+@import url('~dialog-polyfill/dist/dialog-polyfill.css');
 
 :root {
   --color-orange: #ff6500;
