--- a/src/components/Balance/Balance.module.css
+++ b/src/components/Balance/Balance.module.css
@@ -32,3 +32,10 @@
 .balance {
   margin: 0.25rem 0;
 }
+
+.connecting {
+  composes: spinner from '../../components/LoadingSpinner/LoadingSpinner.module.css';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
