--- a/src/components/LoadingSpinner/LoadingSpinner.module.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.module.css
@@ -1,3 +1,13 @@
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes rotation {
   from {
     transform: rotate(0deg);
@@ -11,6 +21,7 @@
 .spinner {
   height: 3rem;
   width: 3rem;
+  animation: 0s linear 1s backwards opacity;
 }
 
 .spinner::before {
