--- a/src/views/GenericError/GenericError.module.css
+++ b/src/views/GenericError/GenericError.module.css
@@ -1,3 +1,12 @@
+.overlay {
+  composes: overlay from '../../components/Overlay/Overlay.module.css';
+  max-width: 100%;
+  max-height: 100%;
+  height: calc(100% - 2rem);
+  inset: 1rem;
+  padding: 1rem;
+}
+
 .text {
   composes: text from '../../components/Overlay/Overlay.module.css';
   background: url('../../components/images/transaction-error.svg') no-repeat top center/4rem;
@@ -12,6 +21,7 @@
 
 .details {
   composes: input from '../../components/Input/Input.module.css';
-  height: 5rem;
-  margin-bottom: 1.5rem;
+  flex-grow: 1;
+  align-self: stretch;
+  margin-bottom: 1rem;
 }
