--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -51,7 +51,7 @@
   --diameter: 0.75rem;
 
   appearance: none;
-  margin: 0;
+  margin: 0 0 -0.125rem;
   height: var(--diameter);
   width: var(--diameter);
   border: 1px solid var(--color-white);
