--- a/src/views/W3NCreateChoose/W3NCreateChoose.module.css
+++ b/src/views/W3NCreateChoose/W3NCreateChoose.module.css
@@ -16,33 +16,6 @@
   margin-top: 1.5rem;
 }
 
-.explanation {
-  composes: subline from '../../components/Typography/Typography.module.css';
-  text-align: left;
-  display: flex;
-  align-items: center;
-  gap: 1.25rem;
-  line-height: 1.25rem;
-  margin: 0;
-}
-
-.avatar {
-  composes: avatar from '../../components/Avatar/Avatar.module.css';
-
-  --size: calc(48rem / 16);
-
-  width: var(--size);
-  height: var(--size);
-  flex-shrink: 0;
-  background: rgb(var(--color-orange-rgb) / 60%) no-repeat;
-}
-
-.deposit {
-  composes: explanation;
-  padding-left: calc(68rem / 16);
-  background: url('../../components/images/deposit.svg') no-repeat left center;
-}
-
 .web3Name {
   composes: identityText from '../../components/Typography/Typography.module.css';
   margin-block: 0.75rem 0;
@@ -51,6 +24,7 @@
 .info {
   composes: subline from '../../components/Typography/Typography.module.css';
   margin-block: 0.5rem 0;
+  white-space: pre-line;
 }
 
 .paymentMethods {
@@ -60,7 +34,7 @@
   flex-direction: column;
   gap: 0.75rem;
   align-items: flex-start;
-  padding-inline: calc(68rem / 16);
+  padding-inline: 0.25rem;
   margin-top: 1.5rem;
 }
 
@@ -80,11 +54,12 @@
   justify-content: space-between;
   padding-right: 1rem;
   position: relative;
+  text-align: left;
 }
 
 .inputLabel {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   cursor: pointer;
 }
 
@@ -103,7 +78,9 @@
 
 .select {
   composes: inputRadio from '../../components/Input/Input.module.css';
-  margin: 0 0.75rem 0 0;
+  margin-right: 0.75rem;
+  margin-top: 0.125rem;
+  flex-shrink: 0;
 }
 
 .errorTooltip {
@@ -122,24 +99,10 @@
   margin-top: 1.5rem;
 }
 
-.cancel {
-  composes: buttonSecondary from '../../components/Button/Button.module.css';
-}
-
 .upgrade {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
 
-.deleted {
-  composes: explanation;
-  text-align: center;
-  margin: 2rem 0 1rem;
-}
-
 .back {
   composes: buttonSecondary from '../../components/Button/Button.module.css';
-}
-
-.next {
-  composes: buttonPrimary from '../../components/Button/Button.module.css';
 }
