SK-1338: Fix tooltip position

--- a/src/views/ShareCredentialSign/ShareCredentialSign.module.css
+++ b/src/views/ShareCredentialSign/ShareCredentialSign.module.css
@@ -58,4 +58,6 @@
 
 .errorTooltip {
   composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+  top: 2.5rem;
+  left: 75%;
 }
