--- a/src/views/DidUpgradeExplainer/DidUpgradeExplainer.module.css
+++ b/src/views/DidUpgradeExplainer/DidUpgradeExplainer.module.css
@@ -71,16 +71,19 @@
   box-sizing: border-box;
   margin: 0;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   padding-right: 1rem;
   position: relative;
+  text-align: left;
+  gap: 0.5rem;
 }
 
 .inputLabel {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   cursor: pointer;
+  flex: 1;
 }
 
 .kilt {
@@ -98,7 +101,9 @@
 
 .select {
   composes: inputRadio from '../../components/Input/Input.module.css';
-  margin: 0 0.75rem 0 0;
+  margin-right: 0.75rem;
+  margin-top: 0.125rem;
+  flex-shrink: 0;
 }
 
 .errorTooltip {
