--- a/src/views/ImportCredentials/ImportCredentials.module.css
+++ b/src/views/ImportCredentials/ImportCredentials.module.css
@@ -82,7 +82,8 @@
   width: 100%;
   max-width: 100%;
   padding-right: 2rem;
-  background: url('../../components/images/checkmark-bold.svg') no-repeat right 0.25rem center/1rem;
+  background: url('../../components/images/checkmark-bold.svg') no-repeat right
+    0.25rem center/1rem;
 }
 
 .fileResult {
@@ -105,7 +106,8 @@
   composes: fileResult;
   padding: 0;
   border: 0;
-  background: url('../../components/images/info-solid-red.svg') no-repeat right 0.375rem bottom 0.25rem/0.75rem;
+  background: url('../../components/images/info-solid-red.svg') no-repeat right
+    0.375rem bottom 0.25rem/0.75rem;
   cursor: pointer;
   composes: inputText from '../../components/Typography/Typography.module.css';
   color: var(--color-text);
