--- a/src/components/CopyValue/CopyValue.module.css
+++ b/src/components/CopyValue/CopyValue.module.css
@@ -26,7 +26,9 @@
   width: calc(100% - 4.5rem);
   padding-right: 2.5rem;
   padding-left: 2rem;
-  background: var(--copy-value-icon) no-repeat left 0.625rem center/var(--copy-value-icon-size), var(--input-gradient);
+  background: var(--copy-value-icon) no-repeat left 0.625rem
+      center/var(--copy-value-icon-size),
+    var(--input-gradient);
 }
 
 .long {
