--- a/src/components/CredentialCard/CredentialCard.module.css
+++ b/src/components/CredentialCard/CredentialCard.module.css
@@ -189,7 +189,8 @@
   left: 0;
   bottom: 0;
   content: ' ';
-  background: url('../images/checkmark-bold.svg') no-repeat center/var(--tick-size);
+  background: url('../images/checkmark-bold.svg') no-repeat
+    center/var(--tick-size);
 }
 
 .selectMultiple:disabled {
@@ -234,7 +235,8 @@
 
 .warning {
   composes: heading from '../../components/Overlay/Overlay.module.css';
-  background: url('../../components/images/transaction-error.svg') no-repeat top center/4rem;
+  background: url('../../components/images/transaction-error.svg') no-repeat top
+    center/4rem;
   padding-top: 5rem;
   margin: 0;
   color: var(--color-orange);
