--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -19,7 +19,10 @@
 
   padding-bottom: var(--footer-height);
   background-size: var(--footer-height);
-  background-image: linear-gradient(var(--gradient-start) 0%, var(--gradient-end) var(--footer-height));
+  background-image: linear-gradient(
+    var(--gradient-start) 0%,
+    var(--gradient-end) var(--footer-height)
+  );
   background-position: bottom;
   box-shadow: 0.375rem 0.375rem 0.75rem 0 rgb(var(--color-black-rgb) / 50%);
   z-index: 1;
@@ -39,7 +42,10 @@
 
 .heading {
   composes: buttonText from '../Typography/Typography.module.css';
-  background: linear-gradient(var(--gradient-start) 0%, var(--gradient-end) 100%);
+  background: linear-gradient(
+    var(--gradient-start) 0%,
+    var(--gradient-end) 100%
+  );
   color: var(--color-grey-light);
   margin: 0;
   padding: 0.5rem 0.75rem;
