--- a/src/components/Overlay/Overlay.module.css
+++ b/src/components/Overlay/Overlay.module.css
@@ -1,14 +1,13 @@
 .overlay {
   border: 0;
   border-radius: 0.75rem;
-  background:
-    linear-gradient(
-      135deg,
-      #0a1b2f 0%,
-      #304765 40%,
-      #547099 70%,
-      #547099 100%
-    );
+  background: linear-gradient(
+    135deg,
+    #0a1b2f 0%,
+    #304765 40%,
+    #547099 70%,
+    #547099 100%
+  );
   box-shadow: 0.375rem 0.375rem 0.75rem 0 rgb(var(--color-black-rgb) / 50%);
   position: absolute;
   top: calc(99rem / 16);
