--- a/src/views/CreatePassword/CreatePassword.module.css
+++ b/src/views/CreatePassword/CreatePassword.module.css
@@ -34,7 +34,8 @@
 .pass {
   color: var(--color-grey-light);
   padding: 0 1.125rem;
-  background: url('../../components/images/checkmark-circle.svg') no-repeat right 75%/0.75rem;
+  background: url('../../components/images/checkmark-circle.svg') no-repeat
+    right 75%/0.75rem;
 }
 
 .inputLine {
@@ -75,7 +76,9 @@
   grid-area: self;
   content: '';
   /* stylelint-disable-next-line  max-line-length */
-  clip-path: path('M0,50.2C0,22.5,22.4,0,50,0s50,22.5,50,50.2c0,24.9-18.5,46.3-43,49.8c-2,0.3-3.9-1.1-4.2-3.2 c-0.3-2.1,1.1-4,3.2-4.2c20.8-2.9,36.6-21.1,36.6-42.2C92.5,26.8,73.4,7.7,50,7.7S7.6,26.8,7.6,50.2c0,21.3,15.8,39.5,36.8,42.3 c2,0.3,3.5,2.2,3.2,4.2c-0.3,2.1-2.2,3.5-4.2,3.2C18.6,96.6,0,75.2,0,50.2');
+  clip-path: path(
+    'M0,50.2C0,22.5,22.4,0,50,0s50,22.5,50,50.2c0,24.9-18.5,46.3-43,49.8c-2,0.3-3.9-1.1-4.2-3.2 c-0.3-2.1,1.1-4,3.2-4.2c20.8-2.9,36.6-21.1,36.6-42.2C92.5,26.8,73.4,7.7,50,7.7S7.6,26.8,7.6,50.2c0,21.3,15.8,39.5,36.8,42.3 c2,0.3,3.5,2.2,3.2,4.2c-0.3,2.1-2.2,3.5-4.2,3.2C18.6,96.6,0,75.2,0,50.2'
+  );
 }
 
 .complexityNone::before {
@@ -83,7 +86,11 @@
 }
 
 .complexityPoor::before {
-  background-image: conic-gradient(from 180deg at center, var(--color-orange), var(--color-yellow));
+  background-image: conic-gradient(
+    from 180deg at center,
+    var(--color-orange),
+    var(--color-yellow)
+  );
 }
 
 .complexityMedium::before {
@@ -91,7 +98,11 @@
 }
 
 .complexityGood::before {
-  background-image: conic-gradient(from 180deg at center, var(--color-yellow), var(--color-green));
+  background-image: conic-gradient(
+    from 180deg at center,
+    var(--color-yellow),
+    var(--color-green)
+  );
 }
 
 .complexityOk::before {
@@ -104,7 +115,9 @@
   width: calc(57rem / 16);
   height: calc(64rem / 16);
   /* stylelint-disable-next-line  max-line-length */
-  clip-path: path('M37.419 24.346v-1.338c0-4.792-3.567-8.805-8.192-9.25-2.564-.112-5.127.612-6.91 2.396a8.782 8.782 0 0 0-2.843 6.408v1.784c-3.4.78-5.963 3.733-5.963 7.356V42.29c0 4.012 3.288 7.133 7.134 7.133h15.492c4.012 0 7.133-3.288 7.133-7.133V31.702c.112-3.623-2.452-6.576-5.851-7.356zm-12.985-5.963c1.17-1.17 2.842-1.616 4.626-1.505 3.009.279 5.35 3.01 5.35 6.242v1.058H22.483v-1.616c0-1.616.724-3.12 1.95-4.18zM40.372 42.4c0 2.397-1.95 4.18-4.18 4.18H20.7c-2.229 0-4.18-1.95-4.18-4.18V31.813c0-2.508 2.063-4.625 4.626-4.625h14.6c2.509 0 4.626 1.95 4.626 4.458v10.755z M28.447 33.15c-.892 0-1.505.614-1.505 1.505v6.019c0 .892.613 1.505 1.505 1.505.891 0 1.504-.613 1.504-1.505v-6.019c0-.891-.613-1.504-1.504-1.504z');
+  clip-path: path(
+    'M37.419 24.346v-1.338c0-4.792-3.567-8.805-8.192-9.25-2.564-.112-5.127.612-6.91 2.396a8.782 8.782 0 0 0-2.843 6.408v1.784c-3.4.78-5.963 3.733-5.963 7.356V42.29c0 4.012 3.288 7.133 7.134 7.133h15.492c4.012 0 7.133-3.288 7.133-7.133V31.702c.112-3.623-2.452-6.576-5.851-7.356zm-12.985-5.963c1.17-1.17 2.842-1.616 4.626-1.505 3.009.279 5.35 3.01 5.35 6.242v1.058H22.483v-1.616c0-1.616.724-3.12 1.95-4.18zM40.372 42.4c0 2.397-1.95 4.18-4.18 4.18H20.7c-2.229 0-4.18-1.95-4.18-4.18V31.813c0-2.508 2.063-4.625 4.626-4.625h14.6c2.509 0 4.626 1.95 4.626 4.458v10.755z M28.447 33.15c-.892 0-1.505.614-1.505 1.505v6.019c0 .892.613 1.505 1.505 1.505.891 0 1.504-.613 1.504-1.505v-6.019c0-.891-.613-1.504-1.504-1.504z'
+  );
 }
 
 .complexityNone .lock,
